[gd_scene load_steps=3 format=3 uid="uid://bat70q1us7y8b"]

[ext_resource type="Texture2D" uid="uid://cgp0iy46gv5vr" path="res://temp_art/gartic/godot_cross.png" id="1_0eia8"]
[ext_resource type="Script" path="res://test_scenes/item_info.gd" id="1_i7aa5"]

[node name="ItemInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i7aa5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -198.5
offset_bottom = 198.5
grow_horizontal = 2
grow_vertical = 2

[node name="ItemTexture" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_0eia8")
expand_mode = 1
stretch_mode = 5

[node name="ItemLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 19
text = "TEST"

[node name="QuantityLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X99
"
